--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacopo Poletto - Commmunication Designer</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script scr="nav.js"></script>
 </head>
 
@@ -13,7 +13,7 @@
     
     <header>
         <div class="header-container">
-            <h1>👋 hey there, it’s Jay! I’m a made in @polimi Communication Designer, focused on UX and dataviz.</h1>
+            <h1>👋 hey there, it’s Jay! I’m a made in @polimi Communication Designer, focused on UX and data visualization.</h1>
             <h2>Fascinated by complexity and yearning for expressive clarity.</h2>
         </div>
     </header>
@@ -24,7 +24,7 @@
                 <p>Personal M.Sc. Research Thesis, <a href="https://www.design.polimi.it/it">@polimi</a><br>2020</p>
                 <p class="project-super-short">Questa è una descrizione supercorta del progetto</p>
             </div>
-            <a href="#">
+            <a href="/projects/visualizzare-quasi-la-stessa-cosa.html">
                 <figure>
                     <img src="/assets/img/project.jpg">
                 </figure>
@@ -59,32 +59,9 @@
             <div class="selected-project-info">
                 <h3>b(r)uc(i)arsi</h3>
                 <p>Density Design Final Synthesis Studio, Info-poetry <a href="https://www.design.polimi.it/it">@polimi</a><br>2019</p>
+                <p class="project-super-short">The artwork wants to stress the process of assuming heroin through vein injection by applying the same process to little human waxworks.</p>
             </div>
-            <a href="#">
-                <figure>
-                    <img src="/assets/img/project.jpg">
-                </figure>
-            </a>
-        </div>
-
-        <div class="selected-project-container">
-            <div class="selected-project-info">
-                <h3>Aerilon Kingdom</h3>
-                <p>Complex Artefacts and System Design Studio, <a href="https://www.design.polimi.it/it">@polimi</a><br>2018</p>
-            </div>
-            <a href="#">
-                <figure>
-                    <img src="/assets/img/project.jpg">
-                </figure>
-            </a>
-        </div>
-
-        <div class="selected-project-container">
-            <div class="selected-project-info">
-                <h3>Cooking Memo</h3>
-                <p>Interaction Design Studio, <a href="https://www.design.polimi.it/it">@polimi</a><br>2018</p>
-            </div>
-            <a href="#">
+            <a href="/projects/bruciarsi-infopoetry.html">
                 <figure>
                     <img src="/assets/img/project.jpg">
                 </figure>
